// Author: David Walshe
// Data:   19/04/2020

syntax = "proto3";

package blog;

// Blog is a container for blog data.
message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

// Blog Read
// ---------------------------------------------------------------------------------------------------------------------
message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}


// Blog Create
// ---------------------------------------------------------------------------------------------------------------------
message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}


// Blog List
// ---------------------------------------------------------------------------------------------------------------------
message ListBlogRequest {}

message ListBlogResponse {
  Blog blog = 1;
}


// =====================================================================================================================
// Services
// =====================================================================================================================
service BlogService {
  // Read a blog.
  rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {};
  // Create a new blog.
  rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {};
  // Lists all the current blogs.
  rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse) {};
}